--- a/todo/templates/todo/add_item.html
+++ b/todo/templates/todo/add_item.html
@@ -7,7 +7,7 @@
     <title>Add Item</title>
 </head>
 <body>
-    <h1>Add a todo Item</h1>
+    <h1>Add a toddoo Item</h1>
     <form method="POST" action="add">
         {% csrf_token %}
         {{ form.as_p }}
